--- a/content/acronyms.tex
+++ b/content/acronyms.tex
@@ -1,7 +1,9 @@
-\newglossaryentry{SOA}{name=SOA,description={Service Oriented Architecture}}
 \newglossaryentry{ADDA}{name=ADDA,description={Aspect-Driven Design Approach}}
 \newglossaryentry{API}{name=API,description={Application Programming Interface}}
 \newglossaryentry{AST}{name=AST,description={Abstract Syntax Tree}}
+\newglossaryentry{AOP}{name=AOP,description={Aspect Oriented Programming}}
+\newglossaryentry{BDD}{name=BDD,description={Behaviour Driven Development}}
+\newglossaryentry{CI}{name=CI,description={Continuous Integration}}
 \newglossaryentry{CORBA}{name=CORBA,description={Common Object Request Broker Architecture}}
 \newglossaryentry{CSS}{name=CSS,description={Cascading Style Sheets}}
 \newglossaryentry{DOM}{name=DOM,description={Document Object Model}}
@@ -12,7 +14,7 @@
 \newglossaryentry{HTML}{name=HTML,description={Hypertext Markup Language}}
 \newglossaryentry{HTTP}{name=HTTP,description={Hypertext Transfer Protocol}}
 \newglossaryentry{IDL}{name=IDL,description={Interface Description Language}}
-\newglossaryentry{IS}{name=IS,description={Informační systém}}
+\newglossaryentry{IS}{name=IS,description={Informačn\'{\i} systém}}
 \newglossaryentry{JSON}{name=JSON,description={JavaScript Object Notation}}
 \newglossaryentry{MDA}{name=MDA,description={Model-Driver Architecture}}
 \newglossaryentry{MQ}{name=MQ,description={Message Queue}}
@@ -25,6 +27,7 @@
 \newglossaryentry{SOAP}{name=SOAP,description={Simple Object Access Protocol}}
 \newglossaryentry{UC}{name=UC,description={Use Case}}
 \newglossaryentry{UI}{name=UI,description={User Interface}}
+\newglossaryentry{URL}{name=URL,description={Uniform Resource Locator}}
 \newglossaryentry{WSDL}{name=WSDL,description={Web Service Description Language}}
 \newglossaryentry{XML}{name=XML,description={Extensible Markup Language}}
 \newglossaryentry{XSD}{name=XSD,description={XML Schema Definition}}
