--- a/content/appendix-B-zdrojove-kody.tex
+++ b/content/appendix-B-zdrojove-kody.tex
@@ -6,7 +6,7 @@
 %\chapter{Zdrojové kódy}
 %
 %\lstinputlisting[
-%caption={Příklad definice služeb v gRPC},
+%caption={Př\'{\i}klad definice služeb v gRPC},
 %label={lst:grpc-example},
 %language=Protobuf,
 %frame=single,
