--- a/content/appendix-C-zkratky.tex
+++ b/content/appendix-C-zkratky.tex
@@ -2,4 +2,4 @@
 
 \renewcommand*{\glsnamefont}[1]{\textbf{#1}}
 \setlength{\glsdescwidth}{0.95\linewidth}
-\printglossary[type=\acronymtype,title={Seznam použitých zkratek}]\label{ch:shortcuts}
+\printglossary[type=\acronymtype,title={Seznam použit\'ych zkratek}]\label{ch:shortcuts}
