--- a/content/appendix-D-cd.tex
+++ b/content/appendix-D-cd.tex
@@ -8,10 +8,10 @@
 % TODO: přepsat na DP
 
 \begin{verbatim}
-    |-- nutfroms-example/       Ukázkový systém využívající knihovnu
+    |-- nutfroms-example/       Ukázkov\'y systém využ\'{\i}vaj\'{\i}c\'{\i} knihovnu
     |  |-- dist/                Zkompilované zdrojové soubory pro distribuci
     |  |-- docs/                Dokumentace
-    |  |-- src/                 Zdrojový kód aplikace
+    |  |-- src/                 Zdrojov\'y kód aplikace
     |
     |-- nutforms-ios-client/    Klientská část knihovny pro platformu iOS
     |  |-- client/              Zdrojové soubory knihovny
