--- a/content/chapter-04-navrh.tex
+++ b/content/chapter-04-navrh.tex
@@ -14,7 +14,7 @@ V této kapitole ...
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=0.8\linewidth]{figures/join-points.pdf}
-    \caption{Diagram životního cyklu služby a identifikovaných join-pointů}
+    \caption{Diagram životn\'{\i}ho cyklu služby a identifikovan\'ych join-pointů}
     \label{fig:join-points}
 \end{figure} % TODO: popsat
 
@@ -26,19 +26,19 @@ V této kapitole ...
 
 \section{Architektura frameworku}
 
-\section{Zachycení byznysového konextu}
+\section{Zachycen\'{\i} byznysového konextu}
 
-Přístup \gls{ADDA} doporučuje popsat byznysová pravidla pomocí
-vlastního, na míru šitého, doménově specifického jazyka~\cite{cemus2015automated}.
-V našem případě můžeme jazykem \gls{DSL} popsat kompletně i celý
-byznysový kontext.
+Př\'{\i}stup \gls{ADDA} doporučuje popsat byznysová pravidla pomoc\'{\i}
+vlastn\'{\i}ho, na m\'{\i}ru šitého, doménově specifického jazyka~\cite{cemus2015automated}.
+V našem př\'{\i}padě můžeme jazykem \gls{DSL} popsat kompletně i cel\'y
+byznysov\'y kontext.
 
 \section{Metamodel byznys kontextu}\label{sec:metamodel}
 
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=\linewidth]{figures/business-context-metamodel.pdf}
-    \caption{Diagram tříd metamodelu byznysového kontextu}
+    \caption{Diagram tř\'{\i}d metamodelu byznysového kontextu}
     \label{fig:business-context-metamodel}
 \end{figure} % TODO: popsat
 
@@ -49,7 +49,7 @@ byznysový kontext.
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=0.8\linewidth]{figures/business-context-loading.pdf}
-    \caption{Diagram procesu inicializace byznysových kontextů}
+    \caption{Diagram procesu inicializace byznysov\'ych kontextů}
     \label{fig:business-context-loading}
 \end{figure} % TODO: popsat
 
@@ -58,20 +58,20 @@ byznysový kontext.
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=0.8\linewidth]{figures/business-rules-weaver.pdf}
-    \caption{Diagram aktivit weaverů byznysových pravidel}
+    \caption{Diagram aktivit weaverů byznysov\'ych pravidel}
     \label{fig:business-rules-weaver}
 \end{figure} % TODO: popsat
 
-\section{Centrální správa byznys kontextů}
+\section{Centráln\'{\i} správa byznys kontextů}
 
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=0.8\linewidth]{figures/business-context-management.pdf}
-    \caption{Diagram procesu centrální správy byznysových kontextů}
+    \caption{Diagram procesu centráln\'{\i} správy byznysov\'ych kontextů}
     \label{fig:business-context-management}
 \end{figure} % TODO: popsat
 
-\subsection{Uložení rozšířeného pravidla}
+\subsection{Uložen\'{\i} rozš\'{\i}řeného pravidla}
 
 \goal{Diskutovat chaining vs. direct update}
 % TODO: napiš mě
