--- a/content/chapter-07-zaver.tex
+++ b/content/chapter-07-zaver.tex
@@ -1,31 +1,31 @@
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
+%\usepackage[T1]{fontenc}
+%\usepackage[utf8]{inputenc}
 
 %!TEX ROOT=../diploma-thesis.tex
 
 \chapter{Závěr}\label{ch:zaver}
 
-\section{Analýza dopadu použití frameworku}
+\section{Anal\'yza dopadu použit\'{\i} frameworku}
 
-\section{Budoucí rozšiřitelnost frameworku}
+\section{Budouc\'{\i} rozšiřitelnost frameworku}
 
-\section{Možností uplatnění navrženého frameworku}
+\section{Možnost\'{\i} uplatněn\'{\i} navrženého frameworku}
 
-\section{Další možnosti uplatnění \gls{AOP} v \gls{SOA}}
+\section{Dalš\'{\i} možnosti uplatněn\'{\i} \gls{AOP} v \gls{SOA}}
 
 \todo{
 \begin{itemize}
     \item{Extrakce dokumentace}
     \item{Extrakce byznysového modelu}
-    \item{Konfigurace prostředí}
+    \item{Konfigurace prostřed\'{\i}}
 \end{itemize}
 }
 
-\section{Shrnutí}
+\section{Shrnut\'{\i}}
 
 \todo{
 \begin{itemize}
-    \item{Dosáhli jsme cílů práce}
-    \item{Stručné shrnutí co všechno a jak jsme udělali}
+    \item{Dosáhli jsme c\'{\i}lů práce}
+    \item{Stručné shrnut\'{\i} co všechno a jak jsme udělali}
 \end{itemize}
 }
