--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -52,6 +52,8 @@ unicode=true,
 \usepackage{sourcecode}
 \usepackage{protobuf/lang}  % include language definition for protobuf
 \usepackage{protobuf/style} % include custom style for proto declarations.
+\usepackage{tabularx}
+\usepackage{array}
 
 \usepackage[style=long,acronym,nomain,numberedsection]{glossaries}
 \makeglossaries
