--- a/reference.bib
+++ b/reference.bib
@@ -525,3 +525,19 @@
     url = {https://www.linuxfoundation.org/projects/linux/},
     urldate = {2018-04-18},
 }
+
+@inproceedings{solis2011study,
+    title = {A study of the characteristics of behaviour driven development},
+    author = {Solis, Carlos and Wang, Xiaofeng},
+    booktitle = {Software Engineering and Advanced Applications (SEAA), 2011 37th EUROMICRO Conference on},
+    pages = {383--387},
+    year = {2011},
+    organization = {IEEE}
+}
+
+@online{expressjs,
+    key = {Express – Node.js web application framework},
+    title = {Express – Node.js web application framework},
+    url = {https://expressjs.com/},
+    urldate = {2018-04-18}
+}
