--- a/content/chapter-01-uvod.tex
+++ b/content/chapter-01-uvod.tex
@@ -9,31 +9,31 @@
 \begin{itemize}
     \item popis tématu a jeho důležitost
     \item motivace práce
-    \item co bude cílem a požadovaným výstupem této práce
+    \item co bude c\'{\i}lem a požadovan\'ym v\'ystupem této práce
     \item popis struktury DP
 \end{itemize}
 }
 
-\section{Jak číst tuto práci}
+\section{Jak č\'{\i}st tuto práci}
 
 \goal{Popis struktury DP a obsah kapitol}
-Kapitola~\ref{ch:analyza} se venuje detailní analýze problematiky bynysových pravidel a
-architektury orientované na služby, včetně jejího historického vývoje až po nejnovější trendy
-a v závěru identifikuje požadavky kladené na implementaci knihovny pro centrální správu a
-automatickou distribuci byznysových pravidel v této architektuře. Kapitola~\ref{ch:reserse}
-se zabývá rešerší stávajících prístupu k vývoji informacních systému a speciálně se zaměřuje
-na koncepty aspektově orientovaného programování a moderního aspekty řízeného přístupu k návrhu
-systémů. Dále se kapitola věnuje průzkumu existujících nástrojů pro správu byznysových pravidel.
-Kapitola~\ref{ch:navrh} formalizuje prostředí architektury orientované na služby do terminologie
-aspektově orientovaného programování a na základě této formalizace navrhuje koncept frameworku,
-který realizuje centrální správu a automatickou distribuci byznysových pravidel.
-V kapitole~\ref{ch:implementace} je detailně probrána implementace knihoven pro navržený framework
-pro platformy jazyků Java a Python a frameworku Node.js. Následující kapitola~\ref{ch:verifikace}
-popisuje, jakým způsobem byly tyto knihovny otestovány a jak byla prokázána jejich funkčnost. Zároveň
-je zde popsána validace a vyhodnocení konceptu frameworku jeho nasazením při vývoji
-jednoduchého ukázkového e-commerce systému. V poslední kapitole~\ref{ch:zaver} je shrnuto, jakých
-cílů bylo v práci dosáhnuto a jakým dalším směrem se může výzkum v této oblasti ubírat.
+Kapitola~\ref{ch:analyza} se věnuje detailn\'{\i} anal\'yze problematiky bynysov\'ych pravidel a
+architektury orientované na služby, včetně jej\'{\i}ho historického v\'yvoje až po nejnovějš\'{\i} trendy
+a v závěru identifikuje požadavky kladené na implementaci knihovny pro centráln\'{\i} správu a
+automatickou distribuci byznysov\'ych pravidel v této architektuře. Kapitola~\ref{ch:reserse}
+se zab\'yvá rešerš\'{\i} stávaj\'{\i}c\'{\i}ch pr\'{\i}stupu k v\'yvoji informacn\'{\i}ch systému a speciálně se zaměřuje
+na koncepty aspektově orientovaného programován\'{\i} a modern\'{\i}ho aspekty ř\'{\i}zeného př\'{\i}stupu k návrhu
+systémů. Dále se kapitola věnuje průzkumu existuj\'{\i}c\'{\i}ch nástrojů pro správu byznysov\'ych pravidel.
+Kapitola~\ref{ch:navrh} formalizuje prostřed\'{\i} architektury orientované na služby do terminologie
+aspektově orientovaného programován\'{\i} a na základě této formalizace navrhuje koncept frameworku,
+kter\'y realizuje centráln\'{\i} správu a automatickou distribuci byznysov\'ych pravidel.
+V kapitole~\ref{ch:implementace} je detailně probrána implementace knihoven pro navržen\'y framework
+pro platformy jazyků Java a Python a frameworku Node.js. Následuj\'{\i}c\'{\i} kapitola~\ref{ch:verifikace}
+popisuje, jak\'ym způsobem byly tyto knihovny otestovány a jak byla prokázána jejich funkčnost. Zároveň
+je zde popsána validace a vyhodnocen\'{\i} konceptu frameworku jeho nasazen\'{\i}m při v\'yvoji
+jednoduchého ukázkového e-commerce systému. V posledn\'{\i} kapitole~\ref{ch:zaver} je shrnuto, jak\'ych
+c\'{\i}lů bylo v práci dosáhnuto a jak\'ym dalš\'{\i}m směrem se může v\'yzkum v této oblasti ub\'{\i}rat.
 
 \goal{Zkratky}
-Zkratky používané v textu jsou vždy nejdříve zavedeny a vysvětleny. Pro přehlednost byl ale zároveň
-souhrn používaných zkratek přidán jako příloha práce~\ref{ch:shortcuts}.
+Zkratky použ\'{\i}vané v textu jsou vždy nejdř\'{\i}ve zavedeny a vysvětleny. Pro přehlednost byl ale zároveň
+souhrn použ\'{\i}van\'ych zkratek přidán jako př\'{\i}loha práce~\ref{ch:shortcuts}.
